chore: remove deprecated `--illegal-access=permit` flag from `pom.xml`