@@ -155,7 +155,6 @@
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
-                        --illegal-access=permit
                         --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                         --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                     </argLine>
